--- a/src/components/sideMenu/sideMenu.css
+++ b/src/components/sideMenu/sideMenu.css
@@ -44,6 +44,9 @@
     background-color: var(--primary);
     color: var(--secondary);
 }
+.side-menu > .menu-options > a:hover .material-symbols-outlined{
+    color:var(--secondary);
+}
 
 .side-menu  hr{
     width: 85%;
@@ -109,7 +112,9 @@
     background-color: var(--primary);
     color: var(--secondary);
 }
-
+.menu-options > .min-link.clicked .material-symbols-outlined {
+    color:var(--secondary);
+}
 
 .min-menu > a > p{
     font-size: small;
