--- a/src/pages/events/awardsSection/awardsection.css
+++ b/src/pages/events/awardsSection/awardsection.css
@@ -19,14 +19,17 @@
 
 .rn{
     font-size: 26px;
-    color: white !important
+    /* color: white !important */
+    color:var(--secondary);
 }
 .pm{
     font-size: 30px;
-    color: white !important
+    /* color: white !important */
+    color:var(--secondary);
 }
 .pd{
-    color: white !important
+    /* color: white !important */
+    color:var(--secondary);
 }
 .titletrophy{
     display: flex;
@@ -40,6 +43,7 @@
    margin-top: 50px;
    font-size: 35px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   color:var(--heading);
 }
 
 .tphy{
