--- a/src/pages/events/eventDetails.css
+++ b/src/pages/events/eventDetails.css
@@ -10,6 +10,7 @@
 .event-details h2{
     font-size: 32px;
     margin:5px 0;
+    color:var(--heading);
 }
 
 .event-details .footer > h2{
@@ -27,5 +28,6 @@
     .event-details h2{
         font-size: 28px;
         margin:5px 0;
+        
     }
 }
