--- a/src/pages/events/graphSection/graphSection.css
+++ b/src/pages/events/graphSection/graphSection.css
@@ -10,6 +10,9 @@
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
 }
 
+.graph-container > .feature >h3{
+    color:var(--subHeading);
+}
 .graph-container > .feature > img{
     width: 80px;
 }
